--- a/src/server/server/static/index.html
+++ b/src/server/server/static/index.html
@@ -44,10 +44,14 @@
   <script type="text/javascript" src="app/app.js"></script>
   <script type="text/javascript" src="app/utils.js"></script>
 
+  <script type="text/javascript" src="app/services/authService.js" ></script>
   <script type="text/javascript" src="app/services/apiService.js" ></script>
   <script type="text/javascript" src="app/services/taskService.js" ></script>
 
+  <script type="text/javascript" src="app/controllers/homeCtrl.js" ></script>
   <script type="text/javascript" src="app/controllers/mainCtrl.js" ></script>
+  <script type="text/javascript" src="app/controllers/loginCtrl.js" ></script>
+  <script type="text/javascript" src="app/controllers/registerCtrl.js" ></script>
 
   <script type="text/javascript" src="app/components/navBar/navBar.js" ></script>
   <script type="text/javascript" src="app/components/devBar/devBar.js" ></script>
